# RMCVnote

./: .gitignore  CMakeLists.txt  功能  报告.txt
.qtcreator/: CMakeLists.txt.user.1f3bb5f  CMakeLists.txt.user.2f14a91  CMakeLists.txt.user.979884f
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  CloudSyncFileMapping.cpp  CloudSyncFileMapping.h  CloudSyncHelper.h  notebookmgr.cpp  notebookmgr.h  vnotex.cpp  vnotex.h
src/core/buffer/: filetypehelper.cpp
src/core/notebook/: bundlenotebook.cpp  bundlenotebook.h  node.cpp  notebook.cpp  notebook.h  notebookparameters.cpp  notebookparameters.h
src/data/core/: core.qrc
src/data/qml/: ExpandStateManager.qml  NoteItem.qml  NotebookItem.qml  a.cmd  cloudSync.qml  old.qml  qml.qrc
src/data/qml/CloudFileManager/: CloudFileManagerPage.qml  main.qml
src/utils/: CMakeLists.txt  CloudFileManagerAdapter.cpp  CloudFileManagerAdapter.h  CloudFileNetWork.cpp  CloudFileNetWork.h  LocalDBMap.h  LocalDataOfUser.h  qmlAdapter.cpp  qmlAdapter.h
src/widgets/: CMakeLists.txt  CloudFileManagerPanel.cpp  CloudFileManagerPanel.h  cloudsyncpanel_llbb.cpp  cloudsyncpanel_llbb.h  dockwidgethelper.cpp  dockwidgethelper.h  mainwindow.cpp  mainwindow.h  messageboxhelper.h  notebooknodeexplorer.cpp  notebookselector.h
src/widgets/dialogs/: CloudSyncDialog.cpp  CloudSyncDialog.h
tests/: CMakeLists.txt
tests/test_cloud/: CMakeLists.txt  test_cloud.cpp  test_cloud.h
tests/test_core/test_notebook/: dummynode.cpp  dummynode.h  dummynotebook.cpp  dummynotebook.h  testnotebookdatabase.cpp  testnotebookdatabase.h
(+17 files in other folders)
